@@ -35,13 +35,14 @@ class TaskControllerIT extends TestDependenciesContainer {
 
     @Test
     @DisplayName("test get task by id test")
+    @Transactional
     void getTaskById_ReturnsValidTask() throws Exception {
         Task task = saveTaskInDbAndGet(
                 generateTestTaskRequest(),
                 generateTestTaskCustomFieldsRequest(),
                 generateTestTaskReferenceRequest());
         String customValue = task.getCustomValueByName("TaskCustomField1");
-        mockMvc.perform(get("/task/" + taskRepository.findAll().get(0).getId()))
+        mockMvc.perform(get("/task/" + taskRepository.findAll().getFirst().getId()))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.TaskDescription").value(task.getDescription()))
                 .andExpect(jsonPath("$.TaskCustomField1")
@@ -51,6 +52,7 @@ class TaskControllerIT extends TestDependenciesContainer {
 
     @Test
     @DisplayName("task successfully deleted test")
+    @Transactional
     void deleteTaskById_CorrectDelete() throws Exception {
         Task task = saveAndGetTestTaskToDelete();
         mockMvc.perform(delete("/task/" + task.getId()))
@@ -59,6 +61,7 @@ class TaskControllerIT extends TestDependenciesContainer {
 
     @Test
     @DisplayName("task deletion failed of fake id test")
+    @Transactional
     void deleteTaskById_NotFound() throws Exception {
         Task task = saveAndGetTestTaskToDelete();
         task.setId(UUID.randomUUID());
@@ -76,7 +79,7 @@ class TaskControllerIT extends TestDependenciesContainer {
                 testTaskReference);
         mockMvc.perform(get("/task")
                         .param("fields", "TaskId,TaskDescription,TaskCustomField1,TaskStatus," +
-                                         "JobCustomList1,ContactCustomField4,JobNumber,ContactCompany")
+                                         "JobCustomList1,ContactCustomField4,JobNumber,ContactCompany,Color,ContactPhones,ContactAddresses")
                         .param("page", String.valueOf(1))
                         .param("size", String.valueOf(10))
                         .param("sort", "TaskNumber:asc,ContactCustomField4:desc,TaskCustomField1:asc")
@@ -97,7 +100,7 @@ class TaskControllerIT extends TestDependenciesContainer {
                 .andExpect(jsonPath("content.[0].TaskStatus").value(testTaskRequest.getStatus().toCamelCase()))
                 .andExpect(jsonPath("content.[0].JobNumber").value(testTaskReference.getJobNumber()))
                 .andExpect(jsonPath("content.[0].ContactCompany").value(
-                        contactRepository.getReferenceById(UUID.fromString(testTaskReference.getContactId())).getCompany()))
+                        contactRepository.getReferenceById(UUID.fromString(testTaskReference.getContactId())).getCompany().getName()))
                 .andExpect(jsonPath("content.[0].TaskCustomField1").value("task custom field 1"))
                 .andExpect(jsonPath("content.[0].JobCustomList1").value("job custom list 1"))
                 .andExpect(jsonPath("content.[0].ContactCustomField4").value("contact custom field 4"))
@@ -106,6 +109,7 @@ class TaskControllerIT extends TestDependenciesContainer {
 
     @Test
     @DisplayName("creating task test")
+    @Transactional
     void createTask() throws Exception {
         CustomFieldsAndLists customFieldsAndLists = CustomFieldsAndLists.builder()
                 .customField1("test custom field1")
@@ -131,6 +135,7 @@ class TaskControllerIT extends TestDependenciesContainer {
 
     @Test
     @DisplayName("update task description is correct test")
+    @Transactional
     void updateTaskDescription_CorrectUpdate() throws Exception {
         Task newTask = saveAndGetTestTaskToUpdate();
         UpsertTaskRequest updatedTaskRequest = getUpdatedTaskRequestByTask(newTask);
@@ -139,7 +144,7 @@ class TaskControllerIT extends TestDependenciesContainer {
         CustomFieldsAndLists customFL = generateTestTaskCustomFieldsRequest();
         customFL.setCustomField1("new custom field 1 value");
         String updatedCustomFL = getQueryString(objectMapper.writeValueAsString(customFL), true);
-        mockMvc.perform(put("/task/" + taskRepository.findAll().get(0).getId() +
+        mockMvc.perform(put("/task/" + taskRepository.findAll().getFirst().getId() +
                             updatedTaskQueryString +
                             updatedCustomFL)
                 )
@@ -155,10 +160,11 @@ class TaskControllerIT extends TestDependenciesContainer {
 
     @Test
     @DisplayName("update task's dates by it's id is correct test")
+    @Transactional
     void updateTaskDates_CorrectUpdate() throws Exception {
         Task newTask = saveAndGetTestTaskToUpdate();
         mockMvc.perform(put("/task")
-                        .param("taskId", String.valueOf(taskRepository.findAll().get(0).getId()))
+                        .param("taskId", String.valueOf(taskRepository.findAll().getFirst().getId()))
                         .param("Start", String.valueOf(LocalDate.now()))
                 )
                 .andExpect(jsonPath("content.[0].TaskId").value(
@@ -173,6 +179,7 @@ class TaskControllerIT extends TestDependenciesContainer {
 
     @Test
     @DisplayName("update assigning task to Unassigned contact and empty job is correct test")
+    @Transactional
     void updateAssigningTaskToUnassignedContactAndEmptyJob_CorrectUpdate() throws Exception {
         Task newTask = saveAndGetTestTaskToUpdate();
         UpsertTaskRequest updatedTaskRequest = getUpdatedTaskRequestByTask(newTask);
@@ -186,7 +193,7 @@ class TaskControllerIT extends TestDependenciesContainer {
                 .jobNumber("")
                 .build();
         String updatedReference = getQueryString(objectMapper.writeValueAsString(updatedTaskReference), true);
-        mockMvc.perform(put("/task/" + taskRepository.findAll().get(0).getId() +
+        mockMvc.perform(put("/task/" + taskRepository.findAll().getFirst().getId() +
                             updatedTaskQueryString +
                             updatedCustomFL +
                             updatedReference)
